<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtFun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtFuncio"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtname" />

        <EditText
            android:id="@+id/txtNomeFun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/txtNomeFun"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtemeio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtemeio" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/txtdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtdata" />

        <EditText
            android:id="@+id/dtData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/dtDat"
            android:inputType="date" />

        <Button
            android:id="@+id/btnConclu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="concluido"
            android:text="@string/btnConclu" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>